<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="#f2efe2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".marcelle.view.ProfileActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textPROFILEEE"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewProf"
            android:src="@drawable/ic_baseline_add_to_photos_24"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginVertical="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPROFILEEE" />

        <Button
            android:id="@+id/btnBlur"
            android:text="Blur Image"
            android:layout_marginVertical="@dimen/radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewProf" />

        <EditText
            android:id="@+id/editUsernameProf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:inputType="text"
            android:layout_marginVertical="@dimen/radius"
            app:layout_constraintTop_toBottomOf="@+id/btnBlur" />

        <EditText
            android:id="@+id/editNamaProf"
            android:inputType="textEmailAddress"
            android:hint="@string/profile_name"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editUsernameProf" />

        <EditText
            android:id="@+id/editAgeProf"
            android:inputType="textEmailAddress"
            android:hint="@string/profile_age"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editNamaProf" />

        <EditText
            android:id="@+id/editAddressProf"
            android:inputType="textEmailAddress"
            android:hint="@string/profile_addr"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/editAgeProf" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_update"

            app:layout_constraintBottom_toTopOf="@+id/btnLogout" />

        <Button
            android:id="@+id/btnLogout"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_logout"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>